# tju-expense

./: .gitignore  README.md  pyproject.toml  tju-expense.spec
.github/workflows/: release.yml
src/tju_expense/: __init__.py  __main__.py  analyze.py  fetch.py
src/tju_expense/utils/: __init__.py  analyze.py  fetch.py  parse.py
