[project]
name = "tju-expense"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SUPER", email = "hi@repus.me" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "numpy<2.0.0",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "rich>=13.9.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tju_expense"]
